# chain-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_cloud_rag.py  run_cloud_rag_egyptian.py  run_local_rag.py  run_local_rag_egyptian.py  run_rag_101.py
examples/V0voice/: 01_hello_tts.py  02_hello_stt.py  03_text_in_voice_out_chatbot.py  04_voice_chatbot.py
examples/chat/: 01_simple_chat.py
examples/delete/: chains.py  fast.py  fiass.py  fiass__id.py  int.py  langraph.py  parser.py  prompt.py  recursivetextsplitter.py  test.py  thinky.py
examples/helloworld/: 01_hello_world_local.py  02_hello_world_azure.py  03_hello_world_openrouter.py
examples/prompts/: 03_prompt_templating.py  run_rag_chat.py  run_rag_few_shot.py
examples/rag/: 04_simple_rag_local.py  05_persistent_rag_local.py  06_rag_azure.py  07_rag_egyptian.py  conversational_rag.py  dev.directory_rag.py  file_rag.py  pdf.py  response.py  run_rag_101.py  simple-text.py
examples/rag0/: 04_simple_rag_local.py  05_persistent_rag_local.py  06_rag_azure.py  07_rag_egyptian.py  local_rag.py  run_rag_101.py  source_text
examples/server/: index.html  requirements.txt
examples/voice/: run_phase1_pipeline.py  run_phase2_full_pipeline.py  test_audio_loopback.py  test_azure_stt.py  test_azure_tts.py  test_vad_visualizer.py
src/: main.py
src/chain/: rag_runner.py
tests/: conftest.py  test_azure_ai_search.py  test_azure_chat_models.py  test_embeddings.py  test_local_models.py  test_prompt_templates.py  test_text_splitters.py  test_vector_stores.py
(+131 files in other folders)
