[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minichain-ai"
version = "0.1.2"
authors = [
    { name = "Fady", email = "contact@fadymohamed.com" },
]
description = "A micro-framework for building with LLMs, inspired by LangChain."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
    "openai>=1.0",
    "numpy",
    "tiktoken",
    "python-dotenv",
]

[project.optional-dependencies]
local = [
    "faiss-cpu",
]
gpu = [
    "faiss-gpu", # For NVIDIA GPU users
]
azure = [
    "azure-search-documents",
    "azure-core",
  
]
voice = [
    "pipecat-ai[silero]", # This pulls in pipecat, onnxruntime, torch, etc.
    "azure-cognitiveservices-speech>=1.34.0",
    "pyaudio", # For local microphone and speaker access
    "websockets",
  
]
# A convenience extra to install everything for development.
dev = [
    "minichain-ai[local,gpu,azure,voice]",
    "pytest",
    "pytest-asyncio",
]

# An 'all' extra is a common convention to install everything.
all = [
    "minichain-ai[local]",
    "minichain-ai[azure]",
    "minichain-ai[voice]",
]

[project.urls]
Homepage = "https://github.com/fady17/minichain"
Issues = "https://github.com/fady17/minichain/issues"